# cast-codes

./: .gitignore  CAST-AGENT.md  CASTCODES.md  CODE_OF_CONDUCT.md  CODY-BRIEF.md  CONTRIBUTING.md  Cargo.toml  DESIGN-CHANGES.md  FAQ.md  README.md  SECURITY.md  WARP.md  about.toml  deny.toml  scalar.config.json
.cargo/: audit.toml
.github/: STAKEHOLDERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_ssh_tmux.yml  04_ssh_legacy.yml  config.yml
.github/PULL_REQUEST_TEMPLATE/: cherrypick.md  feature_flag.md
.github/issue-triage/: config.json
.github/workflows/: README.md  ci.yml  close_stale_fix_prs.yml  create_release.yml  cut_new_releases.yml  release_configurations.json  warp_cleanup_fix_prs.yml
app/: Cargo.toml
app/src/: app_menus.rs  app_state.rs  lib.rs  menu.rs  root_view.rs  tab.rs
crates/ai/: Cargo.toml
crates/app-installation-detection/: Cargo.toml
crates/cast_agent/: Cargo.toml
crates/cast_agent/src/: agent.rs  comux.rs  config.rs  daemon_chat.rs  gateway.rs  lib.rs  runtime.rs  session.rs  substrate.rs  unix_http.rs
crates/cast_agent/tests/: live_daemon.rs  streaming.rs  substrate.rs
crates/computer_use/: Cargo.toml
crates/create_markdown_core/: Cargo.toml  README.md
crates/create_markdown_core/src/: blocks.rs  document.rs  lib.rs  types.rs  utils.rs
crates/create_markdown_core/src/parsers/: inline.rs  markdown.rs  mod.rs  tokenizer.rs
crates/create_markdown_core/src/serializers/: markdown.rs  mod.rs
crates/editor/: Cargo.toml
crates/languages/: Cargo.toml
docs/: COVEN-POWERED-CASTCODES.md
resources/: design-tokens.css
script/: Entitlements.plist  check_ai_attribution  check_cli_chat_boundary  check_rebrand  create_release_tag_and_branch  deploy_remote_server  install_cargo_bundle  run  update_plist  worktree
(+439 files in other folders)
