[package]
name = "languages"
edition = "2021"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
rust-embed.workspace = true
arborium.workspace = true
lazy_static.workspace = true
warp_editor = { path = "../editor" }
